--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box featured">
               <h3>Civil</h3>
-               <img src="img/_CIVIL.jpg" >
+                <img src="img/Civil.png" >
               </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Mechanical</h3>
-               <img src="img/_Mechanical.jpg">
+                <img src="img/Mechanical.png">
               </ul>
              </div>
           </div>
@@ -399,7 +399,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Electrikal</h3>
-              <img src="img/_Electrical.jpg" >
+             <img src="img/Electrical.png" >
               </ul>
              </div>
           </div>
@@ -407,7 +407,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Manufacturing</h3>
-              <img src="img/_MANUFACTURING.jpg" >
+             <img src="img/Manufacturing.png" >
             </div>
           </div>
 
